--- a/LiferayPhotos/ScreenletsViewControllers/UserProfileViewController.xib
+++ b/LiferayPhotos/ScreenletsViewControllers/UserProfileViewController.xib
@@ -46,7 +46,7 @@
                         <constraint firstAttribute="height" constant="80" id="efU-ZG-Da6"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="string" keyPath="themeName" value="shiseidme"/>
+                        <userDefinedRuntimeAttribute type="string" keyPath="themeName" value="liferayphotos"/>
                     </userDefinedRuntimeAttributes>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Username" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wIG-dD-hKq">
@@ -71,7 +71,7 @@
                     <rect key="frame" x="0.0" y="258" width="375" height="409"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="string" keyPath="themeName" value="shiseidme_profile"/>
+                        <userDefinedRuntimeAttribute type="string" keyPath="themeName" value="liferayphotos_profile"/>
                     </userDefinedRuntimeAttributes>
                 </view>
             </subviews>
