--- a/LiferayPhotos/Themes/CommentAddView_liferayphotos.xib
+++ b/LiferayPhotos/Themes/CommentAddView_liferayphotos.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CommentAddView_shiseidme" customModule="Shiseidme" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CommentAddView_liferayphotos" customModule="Shiseidme" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="452" height="66"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -55,7 +55,7 @@
                         <constraint firstAttribute="height" constant="30" id="peo-2h-ca1"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="string" keyPath="themeName" value="shiseidme"/>
+                        <userDefinedRuntimeAttribute type="string" keyPath="themeName" value="liferayphotos"/>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="autoLoad" value="YES"/>
                     </userDefinedRuntimeAttributes>
                 </view>
