--- a/LiferayPhotos/Themes/LoginView_liferayphotos.xib
+++ b/LiferayPhotos/Themes/LoginView_liferayphotos.xib
@@ -123,7 +123,7 @@
                                 <action selector="loginButtonClicked:" destination="iN0-l3-epB" eventType="touchUpInside" id="iWD-h4-aKT"/>
                             </connections>
                         </button>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_xl.gif" translatesAutoresizingMaskIntoConstraints="NO" id="QD2-eg-lFq">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-xl.png" translatesAutoresizingMaskIntoConstraints="NO" id="QD2-eg-lFq">
                             <rect key="frame" x="41" y="111.5" width="265" height="100"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="100" id="OUa-nw-Phg"/>
@@ -173,6 +173,6 @@
     </objects>
     <resources>
         <image name="default-lock-icon.png" width="12" height="16"/>
-        <image name="logo_xl.gif" width="860" height="188"/>
+        <image name="logo-xl.png" width="1440" height="271"/>
     </resources>
 </document>
