--- a/LiferayPhotos/ScreenletsViewControllers/FeedViewController.xib
+++ b/LiferayPhotos/ScreenletsViewControllers/FeedViewController.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FeedViewController" customModule="Shiseidme" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FeedViewController" customModule="LiferayPhotos" customModuleProvider="target">
             <connections>
                 <outlet property="screenlet" destination="0a6-oE-N1a" id="evz-6A-hmG"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
