--- a/Shiseidme/ScreenletsViewControllers/Cells/OtherMessageCell.xib
+++ b/Shiseidme/ScreenletsViewControllers/Cells/OtherMessageCell.xib
@@ -18,65 +18,40 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3dh-zk-9ed">
-                        <rect key="frame" x="10" y="7" width="201" height="70.5"/>
+                        <rect key="frame" x="10" y="7" width="201" height="46"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Ep-Kt-Lp8">
-                        <rect key="frame" x="5" y="3" width="211" height="77"/>
+                        <rect key="frame" x="5" y="3" width="211" height="50"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qzp-ZS-lVI">
-                                <rect key="frame" x="8" y="5" width="198" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="gBh-9q-Axx"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bSA-Xa-Idm">
-                                <rect key="frame" x="8" y="31" width="42" height="20.5"/>
+                                <rect key="frame" x="8" y="13" width="42" height="29"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="05:11 AM" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vfS-hW-CZF">
-                                <rect key="frame" x="151" y="56" width="54" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="54" id="bZA-Pw-W8U"/>
-                                    <constraint firstAttribute="height" constant="21" id="thQ-6d-plT"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.45000000000000001" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.9543728298944445" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="vfS-hW-CZF" secondAttribute="trailing" constant="6" id="9dZ-GK-kv9"/>
-                            <constraint firstAttribute="bottom" secondItem="vfS-hW-CZF" secondAttribute="bottom" id="9j9-eh-ysp"/>
-                            <constraint firstItem="Qzp-ZS-lVI" firstAttribute="leading" secondItem="4Ep-Kt-Lp8" secondAttribute="leading" constant="8" id="Tn8-yf-qmf"/>
+                            <constraint firstItem="bSA-Xa-Idm" firstAttribute="top" secondItem="4Ep-Kt-Lp8" secondAttribute="top" constant="13" id="RV6-si-jyW"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bSA-Xa-Idm" secondAttribute="trailing" constant="8" id="bEd-Yf-LWL"/>
                             <constraint firstAttribute="width" constant="211" id="cmh-Wh-yXN"/>
-                            <constraint firstItem="Qzp-ZS-lVI" firstAttribute="top" secondItem="4Ep-Kt-Lp8" secondAttribute="top" constant="5" id="eHf-Dx-k14"/>
-                            <constraint firstAttribute="trailing" secondItem="Qzp-ZS-lVI" secondAttribute="trailing" constant="5" id="elN-VS-8aq"/>
+                            <constraint firstAttribute="bottom" secondItem="bSA-Xa-Idm" secondAttribute="bottom" constant="8" id="dNP-4g-kGA"/>
                             <constraint firstItem="bSA-Xa-Idm" firstAttribute="leading" secondItem="4Ep-Kt-Lp8" secondAttribute="leading" constant="8" id="es7-GN-cL5"/>
-                            <constraint firstItem="bSA-Xa-Idm" firstAttribute="top" secondItem="Qzp-ZS-lVI" secondAttribute="bottom" constant="5" id="rH2-aF-Cmw"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="3dh-zk-9ed" firstAttribute="leading" secondItem="jnK-WR-8Ds" secondAttribute="leading" constant="10" id="AhV-wS-i9e"/>
-                    <constraint firstAttribute="bottom" secondItem="3dh-zk-9ed" secondAttribute="bottom" constant="5" id="FVF-Hl-Oo2"/>
+                    <constraint firstAttribute="bottom" secondItem="3dh-zk-9ed" secondAttribute="bottom" constant="29.5" id="FVF-Hl-Oo2"/>
                     <constraint firstItem="4Ep-Kt-Lp8" firstAttribute="leading" secondItem="jnK-WR-8Ds" secondAttribute="leading" constant="5" id="PAK-WY-6q8"/>
-                    <constraint firstAttribute="bottom" secondItem="4Ep-Kt-Lp8" secondAttribute="bottom" constant="3" id="XRg-a9-IhW"/>
+                    <constraint firstAttribute="bottom" secondItem="4Ep-Kt-Lp8" secondAttribute="bottom" constant="29.5" id="XRg-a9-IhW"/>
                     <constraint firstItem="3dh-zk-9ed" firstAttribute="top" secondItem="jnK-WR-8Ds" secondAttribute="top" constant="7" id="kyS-Z9-Uuj"/>
                     <constraint firstItem="4Ep-Kt-Lp8" firstAttribute="top" secondItem="jnK-WR-8Ds" secondAttribute="top" constant="3" id="mrA-pI-rWf"/>
                     <constraint firstItem="3dh-zk-9ed" firstAttribute="width" secondItem="4Ep-Kt-Lp8" secondAttribute="width" constant="-10" id="myv-om-flN"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="authorLabel" destination="Qzp-ZS-lVI" id="eqP-ci-Lus"/>
-                <outlet property="dateLabel" destination="vfS-hW-CZF" id="M83-dq-m9w"/>
                 <outlet property="messageLabel" destination="bSA-Xa-Idm" id="j7w-Rk-1oL"/>
                 <outlet property="messageView" destination="4Ep-Kt-Lp8" id="nce-u2-Be1"/>
                 <outlet property="shadowView" destination="3dh-zk-9ed" id="ycp-9x-VJP"/>
