--- a/Shiseidme/Themes/Cells/NewsCell.xib
+++ b/Shiseidme/Themes/Cells/NewsCell.xib
@@ -16,43 +16,30 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3wB-Sg-1gv">
-                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="557"/>
                 </imageView>
-                <view alpha="0.75" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u3J-TT-r0L" userLabel="Overlay">
-                    <rect key="frame" x="0.0" y="591.5" width="375" height="75"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit amet" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FQu-Xc-2HD">
-                            <rect key="frame" x="8" y="28" width="345" height="20.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="bottom" secondItem="FQu-Xc-2HD" secondAttribute="bottom" constant="27" id="8n7-6W-Q3E"/>
-                        <constraint firstItem="FQu-Xc-2HD" firstAttribute="centerX" secondItem="u3J-TT-r0L" secondAttribute="centerX" constant="-7" id="GHu-7O-lK8"/>
-                        <constraint firstAttribute="trailing" secondItem="FQu-Xc-2HD" secondAttribute="trailing" constant="22" id="QGj-29-ldA"/>
-                        <constraint firstItem="FQu-Xc-2HD" firstAttribute="top" secondItem="u3J-TT-r0L" secondAttribute="top" constant="28" id="QYH-Ux-Xr1"/>
-                        <constraint firstItem="FQu-Xc-2HD" firstAttribute="leading" secondItem="u3J-TT-r0L" secondAttribute="leading" constant="8" id="Vm8-fc-aWI"/>
-                    </constraints>
-                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit amet" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FQu-Xc-2HD">
+                    <rect key="frame" x="14" y="603" width="345" height="27"/>
+                    <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="23"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="u3J-TT-r0L" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="30Q-Ew-iks"/>
-                <constraint firstItem="u3J-TT-r0L" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="7Pj-V6-MBH"/>
                 <constraint firstItem="3wB-Sg-1gv" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Awu-c0-nzF"/>
-                <constraint firstItem="u3J-TT-r0L" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="I1p-cf-c3s"/>
+                <constraint firstItem="FQu-Xc-2HD" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="14" id="CU4-wu-IYy"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="FQu-Xc-2HD" secondAttribute="bottom" constant="37" id="Dgj-hw-tOI"/>
                 <constraint firstItem="3wB-Sg-1gv" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="La5-ql-yEH"/>
-                <constraint firstItem="3wB-Sg-1gv" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="Wny-K7-om8"/>
+                <constraint firstItem="3wB-Sg-1gv" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" constant="-90" id="Wny-K7-om8"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="FQu-Xc-2HD" secondAttribute="trailing" constant="16" id="dfL-Lx-Kzs"/>
+                <constraint firstItem="FQu-Xc-2HD" firstAttribute="top" secondItem="3wB-Sg-1gv" secondAttribute="bottom" constant="26" id="lGA-im-cYw"/>
                 <constraint firstItem="3wB-Sg-1gv" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="pVd-KH-W2V"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="image" destination="3wB-Sg-1gv" id="Ml0-d1-HIx"/>
                 <outlet property="newsDescription" destination="FQu-Xc-2HD" id="WV1-ny-1vR"/>
-                <outlet property="overlay" destination="u3J-TT-r0L" id="V0j-VF-eLY"/>
             </connections>
             <point key="canvasLocation" x="31.5" y="54.5"/>
         </view>
